# Spider_Robot

./: .gitignore
Code/Main/: CMakeLists.txt
Code/Main/main/: main.c
Code/Test_PCB/: platformio.ini
Code/Test_PCB/src/: main.cpp
Latex/: chapter1.tex  chapter2.tex  library.tex  main.tex  titlepage.tex
PCB/: PCB.csv  PCB.kicad_pcb  PCB.kicad_prl  PCB.kicad_pro  PCB.kicad_sch  fp-info-cache  ~PCB.kicad_pcb.lck
firmware/Main/main/: CMakeLists.txt  board_config.h  gait.c  gait.h  ik.c  ik.h  leg_config.h  main.c  pca9685.c  pca9685.h  srf05.c  srf05.h  utils.h  wifi_server.c  wifi_server.h
hardware/: PCB.kicad_pcb  PCB.kicad_prl  PCB.kicad_pro  PCB.kicad_sch
latex/: chapter3.tex  chapter4.tex  chapter5.tex  main.tex  references.bib
latex/report/: chapter1.tex  chapter6.tex  chapter7.tex  main.tex  titlepage.tex
latex/slides/: Makefile  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  library.tex  main.tex  titlepage.tex
web_app/: index.html  package.json
web_app/src/: App.jsx  main.jsx
web_app/src/components/layout/: AngleDisplay.jsx  TopBar.jsx
web_app/src/components/settings/: SettingsPanel.jsx
web_app/src/components/viewer/: SpiderViewer.jsx
web_app/src/constants/: robotConfig.js
web_app/src/context/: RobotContext.jsx  WsContext.jsx
web_app/src/utils/: kinematics.js
